@@ -28,6 +28,8 @@ Bug fixes
 * [`3973 <https://cta-redmine.irap.omp.eu/issues/3973>`_] -
   Implement CGRO clock correction
 * Compute spectral model gradients for negative factor values
+* [`3631 <https://cta-redmine.irap.omp.eu/issues/3631>`_] -
+  Display application header in debug mode
 * [`3563 <https://cta-redmine.irap.omp.eu/issues/3563>`_] -
   Fix incompatibility in ``GMatrixSparse::mix_column_prepare()`` method
 * [`3553 <https://cta-redmine.irap.omp.eu/issues/3553>`_] -
